--- a/powerupdata/pubspec.yaml
+++ b/powerupdata/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.17.8
   hidden_drawer_menu: ^3.0.1
   intl: ^0.19.0
+  cloud_firestore: ^4.17.5
+  expansion_tile_list: ^0.1.1
 
 dev_dependencies:
   flutter_test:
