--- a/powerupdata/pubspec.yaml
+++ b/powerupdata/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   intl: ^0.19.0
   cloud_firestore: ^4.17.5
   expansion_tile_list: ^0.1.1
+  flutter_slidable: ^3.1.0
+  provider: ^6.1.2
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
