--- a/PowerUpData-main/PowerUpData-main/pubspec.yaml
+++ b/PowerUpData-main/PowerUpData-main/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.2
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.3
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
